Added rotation animation using new a branch called rps-ui

--- a/styles/main.css
+++ b/styles/main.css
@@ -143,3 +143,6 @@ body {
   text-align: center;
   font-family: 'Courgette', cursive;
 }
+@keyframes mymove {
+  100% {transform: rotate(360deg);}
+}
